--- a/MiniProject/package.json
+++ b/MiniProject/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "mini-project",
-  "version": "1.0.0",
-  "description": "A simple Hello World site using Express and EJS",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
-    "crypto": "^1.0.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6"
+    "name": "mini-project",
+    "version": "1.0.0",
+    "description": "A simple Hello World site using Express and EJS",
+    "main": "app.js",
+    "scripts": {
+        "start": "bun run app.ts",
+        "build": "bun build app.ts"
+      },
+    "dependencies": {
+      "bcrypt": "^5.1.0",
+      "body-parser": "^1.20.2",
+      "crypto": "^1.0.1",
+      "ejs": "^3.1.9",
+      "express": "^4.18.2",
+      "sqlite3": "^5.1.6"
+    }
   }
-}
