--- a/MiniProject/package.json
+++ b/MiniProject/package.json
@@ -13,6 +13,7 @@
       "crypto": "^1.0.1",
       "ejs": "^3.1.9",
       "express": "^4.18.2",
-      "sqlite3": "^5.1.6"
+      "sqlite3": "^5.1.6",
+      "nodemailer": "^6.9.3"
     }
   }
